Fix bug where immutable list was sorted
Well, introduced by the lint suggestions, of course.